tests/positive/Termination/issue2414.juvix
module issue2414;

import Stdlib.Prelude open;

trait
type T :=
  mkT@{
    tt : T;
  };

open T using {mkT} public;

f {{T}} : Nat → Nat
  | zero := zero
  | (suc n) := f n;
