tests/negative/Internal/NoInstance.juvix
module NoInstance;

type Unit := unit;
open Unit;

type Box A := box A;
open Box;

trait
type T A := mkT {pp : A → A};
open T using {mkT};

main : Box Unit := T.pp (box unit);
